--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -6,6 +6,8 @@
   <nav>
     <a routerLink="/articles" routerLinkActive="active">Articles list</a>
     <a routerLink="/users" routerLinkActive="active">Users</a>
+    <a routerLink="/signin" routerLinkActive="active">Signin</a>
+    <!-- <a routerLink="/login" routerLinkActive="active">Login</a> -->
   </nav>
 
   <router-outlet></router-outlet>
