--- a/Angular/src/app/article-detail.component/article-detail.component.html
+++ b/Angular/src/app/article-detail.component/article-detail.component.html
@@ -1,20 +1,25 @@
 
 <div *ngIf="article">
-  <h2>Name: {{article.name}}</h2>
+  <!-- <h4>Name: {{article.name}}</h4> -->
+  <div>
+    <label>Name: </label>
+      <input [(ngModel)]="article.name" placeholder="name"/>
+  </div>
   <div>
     <label>id: </label>{{article.id}}
   </div>
   <div>
-    <label>user id: </label>{{article.user_id}}
+    <label>user id: </label>
+    <input [(ngModel)]="article.user_id" placeholder="content"/>
   </div>
   <div>
-    <label>Content: </label>{{article.content}}
+    <label>Content: </label>
+    <input [(ngModel)]="article.content" placeholder="content"/>
   </div>
 
   <button (click)="goBack()">Back</button>
   <button (click)="save()">Save</button>
 </div>
-
 
 
 <!--
