--- a/Angular/src/app/users/user.component.html
+++ b/Angular/src/app/users/user.component.html
@@ -1,12 +1,10 @@
-<div class="grid grid-pad">
-  <a *ngFor="let user of users" class="col-1-4">
-    <div class="module hero">
-      <h4>Name: {{user.name}}</h4>
-      <div>
-        <label>id: {{ user.id }}</label>
-      </div>
-      <h4>Surname: {{ user.surname }}</h4>
-    </div>
-  </a>
-</div>
 
+
+
+<ul class="list-group">
+  <li *ngFor="let user of users" class="list-group-item">
+    <!-- <span class="badge">{{ article.id }}</span> -->
+    ID {{user.id}} | {{ user.name }}
+
+  </li>
+</ul>
