creating user, CAN'T save encrypted password_digest

--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -6,7 +6,7 @@
   <nav>
     <a routerLink="/articles" routerLinkActive="active">Articles list</a>
     <a routerLink="/users" routerLinkActive="active">Users</a>
-    <a routerLink="/signin" routerLinkActive="active">Signin</a>
+    <a routerLink="/signup" routerLinkActive="active">{{user_signed}}</a>
     <!-- <a routerLink="/login" routerLinkActive="active">Login</a> -->
   </nav>
 
