--- a/Angular/src/app/users/user.component.html
+++ b/Angular/src/app/users/user.component.html
@@ -4,7 +4,7 @@
 <ul class="list-group">
   <li *ngFor="let user of users" class="list-group-item">
     <!-- <span class="badge">{{ article.id }}</span> -->
-    ID {{user.id}} | {{ user.name }}
+    ID {{user.id}} | {{ user.first_name }}
 
   </li>
 </ul>
